[package]
name = "rust-quicktotp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
dirs = "4.0.0"
hmac = "0.12.1"
sha1 = "0.10.5"
structopt = "0.3.26"
totp = "0.1.0"
totp-rs = "4.2.0"
